--- a/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
@@ -2,7 +2,7 @@
   containers.podman.podman_container:
     name: "{{ mawus_config.env }}-maw-pginit-role-password"
     pod: "{{ mawus_config.podman_podname }}"
-    image: "docker.io/postgres:{{ mawus_config.version_postgres }}"
+    image: "{{ mawus_config.podman_image_postgres }}"
     env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
     interactive: true
     state: started
