--- a/playbook_mawus_dev.yml
+++ b/playbook_mawus_dev.yml
@@ -2,7 +2,7 @@
 - name: Configure mikeandwan.us dev environment
   hosts: mawus_dev
   vars_files:
-    - "{{ external_vars_file }}"
+    - "{{ controller_secrets_file }}"
 
   tasks:
     - name: Install Prerequisites
