should have been included in last commit

--- a/roles/mikeandwan_us/tasks/maw_migrate_volume_data.yml
+++ b/roles/mikeandwan_us/tasks/maw_migrate_volume_data.yml
@@ -3,6 +3,7 @@
   containers.podman.podman_volume_info:
     name: "{{ migvol_orig_volume_name }}"
   register: migvol_orig
+  failed_when: false
 
 - name: copy data if original volume exists
   ansible.builtin.include_role:
